--- a/Map.html
+++ b/Map.html
@@ -21,7 +21,8 @@
     <!--<script type="text/javascript" src="http://api.map.baidu.com/getscript?type=quick&file=feature&ak=oXec3eMiIws1586v9MuGfr7GuTTVtmPB"></script>-->
     <!--<script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=oXec3eMiIws1586v9MuGfr7GuTTVtmPB"></script>-->
 
-    <script src="dbfx.js"></script>
+    <!--<script src="dbfx.js"></script>-->
+    <script src="https://lc.dbazure.cn/dbfx/dbfx.js"></script>
     <script src="https://lc.dbazure.cn/dbfx/dbfx.data.js"></script>
     <script src="https://lc.dbazure.cn/dbfx/dbfx.commodel.js"></script>
     <script src="https://lc.dbazure.cn/dbfx/dbfx.serializer.js"></script>
@@ -29,10 +30,12 @@
     <script src="https://lc.dbazure.cn/dbfx/dbfx.resources.js"></script>
 
     <script src="https://lc.dbazure.cn/dbfx/dbfx.commodel.js"></script>
+
     <script src="https://lc.dbazure.cn/dbfx/dbfx.serializer.js"></script>
     <script src="https://lc.dbazure.cn/dbfxui/dbfx.web.controls.js"></script>
     <script src="https://lc.dbazure.cn/dbfxui/dbfx.web.layoutcontrols.js"></script>
     <script src="https://lc.dbazure.cn/dbfxui/dbfx.web.navigation.js"></script>
+
     <!--<script src="https://lc.dbazure.cn/dbfx/dbfx.app.js"></script>-->
 
 
@@ -43,14 +46,16 @@
 </head>
 <body>
 <div id="div" style="height:80%;width: 100%;border: 1px solid #ffaa30"></div>
-<div id="btn" style="height:40px;width: 100px;border: 1px solid #ffaa30"></div>
+<div id="btn" style="height:40px;width: 100px;border: 1px solid #ffaa30">btn</div>
+<div id="btn01" style="height:40px;width: 100px;border: 1px solid #6786ff">btn01</div>
+<div id="btn02" style="height:40px;width: 100px;border: 1px solid #ffd2bc">btn02</div>
 
 <script>
     var divE = document.getElementById("div");
     var map1 = new DBFX.Web.Controls.Map();
     divE.appendChild(map1.VisualElement);
-    map1.Width = "400px";
-    map1.Height = "500px";
+    map1.Width = "800px";
+    map1.Height = "600px";
 
 
     var pos1 = {lng:125.292078,lat:43.828768,title:"biaoqian1",label:"吉林省长春市"};
@@ -68,6 +73,35 @@
         // map1.DrawTruckRoute(arr);
         map1.LoadMarkers(arr);
     }
+
+
+
+    var btn01 = document.getElementById("btn01");
+    btn01.onclick = function (ev) {
+         var config = {
+                //兴趣点类型 多个用|分隔
+                type:"餐饮|酒店|电影院",
+                //每页显示数据数
+                pageSize:5,
+                //默认显示页数
+                pageIndex:1,
+                //兴趣点城市码
+                city:"010",
+                //是否自动调整地图视野使绘制的 Marker点都处于视口的可见范围
+                autoFitView:true,
+                //LngLat-中心点坐标
+                cpoint:[116.405467, 39.907761],
+                //搜索半径 取值范围0-50000
+                radius:2000
+            }
+        map1.PlaceSearchNearBy(config);
+    }
+
+    var btn02 = document.getElementById("btn02");
+    btn02.onclick = function (ev) {
+        map1.setMapCenter([116.405467, 39.907761]);
+    }
+
 
     // var map2 = new DBFX.Web.Controls.Map();
     // divE.appendChild(map2.VisualElement);
@@ -91,6 +125,8 @@
         return self.indexOf(e)===i;
     });
 
+    var aee = new Array();
+    aee.indexOf("a");
     // var arr = [];
     // arr.push(23,45);
     // console.log(arr);
