--- a/TestAMap.html
+++ b/TestAMap.html
@@ -1,25 +1,55 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
+    <title>周边检索</title>
+    <link rel="stylesheet" href="https://cache.amap.com/lbs/static/main1119.css"/>
     <style type="text/css">
-        html{height:100%}
-        body{height:100%;margin:0px;padding:0px}
-        #container{height:100%}
+        #panel {
+            position: fixed;
+            background-color: white;
+            max-height: 90%;
+            overflow-y: auto;
+            top: 10px;
+            right: 10px;
+            width: 280px;
+            border-bottom: solid 1px silver;
+        }
     </style>
-    <script src="https://webapi.amap.com/maps?v=1.4.11&key=501c9ef49f34ed644919c827c3d98b98"></script>
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.14&key=501c9ef49f34ed644919c827c3d98b98"></script>
+    <script type="text/javascript" src="https://cache.amap.com/lbs/static/addToolbar.js"></script>
 </head>
 <body>
 <div id="container"></div>
-</body>
+<div id="panel"></div>
+<script type="text/javascript">
+    var map = new AMap.Map("container", {
+        resizeEnable: true
+    });
+    AMap.service(["AMap.PlaceSearch"], function() {
+        //构造地点查询类
+        var placeSearch = new AMap.PlaceSearch({
+            type: '餐饮服务', // 兴趣点类别
+            pageSize: 5, // 单页显示结果条数
+            pageIndex: 1, // 页码
+            city: "010", // 兴趣点城市
+            citylimit: true,  //是否强制限制在设置的城市内搜索
+            map: map, // 展现结果的地图实例
+            panel: "panel", // 结果列表将在此容器中进行展示。
+            autoFitView: true // 是否自动调整地图视野使绘制的 Marker点都处于视口的可见范围
+        });
 
-<script>
-    var map = new AMap.Map('container', {
-        center:[117.000923,36.675807],
-        zoom:11,
-        viewMode:'3D'
+        var cpoint = [116.405467, 39.907761]; //中心点坐标
+        placeSearch.searchNearBy('', cpoint, 20000, function(status, result) {
+            console.log(result);
+        });
+
+        placeSearch.on("listElementClick",function (sc) {
+            console.log(sc);
+        });
     });
 </script>
-
+</body>
 </html>
